# hummingbird

./: .gitignore  Cargo.toml  README.md
ad/: Cargo.toml
ad/src/: lib.rs
provider/: Cargo.toml
provider/src/: main.rs
resolver/: Cargo.toml
resolver/src/: api.rs  error.rs  main.rs  resolver.rs
resolver/src/api/: api.rs  health.rs  metadata.rs
resolver/src/application/: app.rs
resolver/src/resolver/: ad.rs  ad_matcher.rs  error.rs  provider_client.rs  resolver.rs
