[package]
name = "provider"
version = "0.0.1"
edition = "2021"
resolver = "2"

[dependencies]
axum = "0.6.2"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
