[package]
name = "resolver"
version = "0.0.1"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
axum = "0.6.20"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["full"] }
